[tool.poetry]
name = "loading-ex1"
version = "0.1.0"
description = "Exercise 1 for Package Management"
authors = ["Student"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
